# riskdesk2

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  application-local.properties  docker-compose.release.yml  docker-compose.yml  pom.xml
.codex/: codex-vertex.sh  config.toml  logs_1.sqlite  state_5.sqlite  vertex_claude_responses_proxy.py
.codex-bedrock/: bedrock_claude_responses_proxy.py  config.toml  logs_1.sqlite  state_5.sqlite
auto_trader/: .env.example  .gitignore  README.md  pyproject.toml
auto_trader/auto_trader/: __init__.py  cli.py  config.py
auto_trader/auto_trader/backtest/: __init__.py  data_loader.py  engine.py  metrics.py
auto_trader/auto_trader/indicators/: __init__.py  chaikin.py  rsi.py  wavetrend.py
auto_trader/auto_trader/live/: __init__.py  executor.py  ibkr_client.py
auto_trader/auto_trader/strategy/: __init__.py  risk.py  signals.py  state.py
auto_trader/config/: strategy_10m.yaml  strategy_5m.yaml
auto_trader/docs/: DESIGN.md
auto_trader/tests/: conftest.py  test_backtest.py  test_config.py  test_indicators.py  test_risk.py  test_signals.py
data/: historical_trades_mgc_batch_2.json  historical_trades_mgc_batch_3.json  historical_trades_mgc_batch_4.json  historical_trades_mgc_batch_5.json  historical_trades_mgc_batch_6.json
docs/: ADR_UNIFIED_EXECUTION_CORE.md  AI_HANDOFF.md  ARCHITECTURE_PRINCIPLES.md  AUDIT_2026-04-05.md  DAILY_AUDIT_2026-04-05.md  DAILY_AUDIT_2026-04-06.md  FIX_PLAN_LIVE_FEED.md  PLAN_AUTO_IBKR_EXECUTION.md  PLAN_ORDER_ROUTER_IMPL.md  (+6 more)
(+1544 files in other folders)
